[gd_scene load_steps=2 format=3 uid="uid://cxx8ms7ka8tot"]

[ext_resource type="Script" path="res://scripts/SaveLoad.gd" id="1_d02m4"]

[node name="SaveLoad" type="Node"]

[node name="SaveLoad" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d02m4")

[node name="Background" type="ColorRect" parent="SaveLoad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainPanel" type="Panel" parent="SaveLoad"]
custom_minimum_size = Vector2(900, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="SaveLoad/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 32
text = "SAVE GAME"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="SaveLoad/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Select a slot to save your game"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SaveLoad/MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -220.0
offset_right = 420.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 1

[node name="SlotsContainer" type="GridContainer" parent="SaveLoad/MainPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="SaveLoad/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 250.0
offset_right = 250.0
offset_bottom = 290.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="ActionButton" type="Button" parent="SaveLoad/MainPanel/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SAVE"

[node name="BackButton" type="Button" parent="SaveLoad/MainPanel/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BACK"
